layout bug fix

--- a/app/(auth)/register/worker/PersonalData/personaldata.module.css
+++ b/app/(auth)/register/worker/PersonalData/personaldata.module.css
@@ -15,3 +15,15 @@
     text-align: center;
     padding: 0.9em 0;
 }
+
+.citizenship {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+}
+
+@media (min-width: 450px) {
+    .citizenship {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
